<resources>
    <string name="app_name">Proyecto 1 - Grupo 07 - PDM115</string>
    <string name="AppGrupo">Grupo 07: Programacion para dispositivos Moviles</string>
    <string name="MainActivity">Menu principal del sistema</string>
    <string name="Tabla_Coordinador"> Opciones para Coordinador </string>
    <string name="Tabla_Estudiante">Opciones para Estudiante</string>
    <string name="AgregarEstudiante">Agregar un nuevo Estudiante</string>
    <string name="VerTodosEstudiantes">Estudiantes Registrados</string>
    <string name="EliminarEstudiantes">Eliminar Estudiante</string>
    <string name="ActualizarEstudiantes">Actualizar Estudiante</string>
    <string name="AgregarCoordinador">Agregar Coordinador</string>
    <string name="VerTodosCoordinadores">Coordinadores registrados</string>
    <string name="EliminarCoordinadores">Eliminar Coordinador</string>
    <string name="ActualizarCoordinadores">Actualizar coordinador</string>
    <string name="Tabla_Bitacora"> Opciones para Bitacora </string>
    <string name="Tabla_TipoDeActividad">Opciones para Tipo De Actividad</string>
    <string name="AgregarTipoDeActividad">Agregar un nuevo Tipo de Actividad</string>
    <string name="VerTodosTiposDeActividad">Tipos de Actividades Registradas</string>
    <string name="EliminarTipoDeActividades">Eliminar Tipo De Actividad</string>
    <string name="ActualizarTiposDeActividades">Actualizar Tipo De Actividad</string>
    <string name="AgregarBitacora">Agregar Bitacora</string>
    <string name="VerTodasBitacoras">Bitacoras registrados</string>
    <string name="EliminarBitacora">Eliminar Bitacora</string>
    <string name="ActualizarBitacora">Actualizar Bitacorar</string>
    <string name="Tabla_Modalidad"> Opciones para Modalidad </string>
    <string name="Tabla_Tutor">Opciones para Tutor</string>
    <string name="AgregarTutor">Agregar un nuevo Tutor</string>
    <string name="VerTodosTutores">Tutores Registrados</string>
    <string name="EliminarTutor">Eliminar Tutor</string>
    <string name="ActualizarTutor">Actualizar Tutor</string>
    <string name="AgregarModalidad">Agregar Modalidad</string>
    <string name="VerTodosModalidades">Modalidades registrados</string>
    <string name="EliminarModalidad">Eliminar Modalidad</string>
    <string name="ActualizarModalidad">Actualizar Modalidad</string>
    <string name="LoginActivity">Ingresar al sistema</string>
    <string name="CoordinadorActivity">
        Esta opcion lleva al menu de la tabla Coordinador.
    </string>
    <string name="EstudianteActivity">
        Menu para gestionar la tabla Estudiante.
    </string>
    <string name="BitacoraActivity">
        Menu para gestionar la tabla Bitacora.
    </string>
    <string name="TipoDeActividadActivity">
        Menu para gestionar la tabla Tipo De Actividad.
    </string>
    <string name="InstitucionActivity">
        Menu para gestionar la tabla Institucion.
    </string>
    <string name="ServicioSocialActivity">
        Menu para gestionar la tabla Servicio Social.
    </string>
    <string name="ModalidadActivity">
        Menu para gestionar la tabla Modalidad.
    </string>
    <string name="TutorActivity">
        Menu para gestionar la tabla Tutor.
    </string>
    <string name="AlertaBaseDeDatos">Para versiones de la base menores a 3.6, la aplicacion no funcionara correctamente.</string>
    <string name="Version">Version actual del dispositivo: </string>
    <string name="llenarBD">Llenar la base de datos</string>
    <string name="llenarBDBitacora">Llenar Base de datos</string>
    <string name="CrearEstudiante">Agregar un nuevo Estudiante</string>
    <string name="ActualizarEstudiante">Actualizar un Estudiante existente</string>
    <string name="EliminarEstudiante">Eliminar un estudiante de la base</string>
    <string name="VerEstudiantes">Ver todos los estudiantes</string>
    <string name="LLENARBD">Llenar la base de datos</string>
    <string name="CrearTipoDeActividad">Agregar un nuevo Tipo De Actividad</string>
    <string name="ActualizarTipoDeActividad">Actualizar un Tipo De Actividad existente</string>
    <string name="EliminarTipoDeActividad">Eliminar un Tipo De Actividad de la base</string>
    <string name="VerTipoDeActividades">Ver todos los Tipos De Actividades</string>
    <string name="CrearCoordinador">Agregar un nuevo Coordinador</string>
    <string name="ActualizarCoordinador">Actualizar un Coordinador existente</string>
    <string name="EliminarCoordinador">Eliminar un coordinador</string>
    <string name="VerCoordinadores">Ver todos los coordinadores</string>
    <string name="CrearBitacora">Agregar una nueva Bitacora </string>
    <string name="Actualizarbitacora">Actualizar una Bitacora existente</string>
    <string name="EliminaBitacora">Eliminar una Bitacora</string>
    <string name="VerBitacora">Ver todas las bitacoras</string>
    <string name="CarnetEstudiante">Carnet Estudiante</string>
    <string name="NombreEstudiante">Nombre Estudiante</string>
    <string name="EmailEstudiante">Correo Electronico</string>
    <string name="TelEstudiante">Telefono Estudiante</string>
    <string name="CarreraEstudiante">Carrera cursante</string>
    <string name="AgregarBtn">Agregar Estudiante</string>
    <string name="IdTipoActividad">Id Tipo De Actividad</string>
    <string name="NomActividad">Nombre de la Actividad</string>
    <string name="CantHoras">Cantidad de Horas</string>
    <string name="DescActividad">Descripcion de Tipo De Actividad</string>
    <string name="AgregBtn">Agregar Tipo De Actividad</string>
    <string name="EliminarEstudianteText">Seleccione un elemento a eliminar</string>
    <string name="SeleccionarEstudiantes">Estudiantes en el sistema</string>
    <string name="ActualizarEstudianteActivity">Seleccione un estudiante a actualizar</string>
    <string name="BotonActualizarEstudiante">Actualizar Estudiante</string>
    <string name="EliminarTipoDeActividadText">Seleccione el Elemento a Eliminar</string>
    <string name="SeleccionarTipoActividad">Tipos de Actividades en el Sistema</string>
    <string name="ActualizarTipoActividadActivity">Seleccione un tipo de actividad a actualizar</string>
    <string name="BotonActualizarTipoActividad">Actualizar Tipo de Actividad</string>
    <string-array name="carreras_array">
        <item>Ingenieria Civil</item>
        <item>Ingenieria Industrial</item>
        <item>Ingenieria Electrica</item>
        <item>Ingenieria en Alimentos</item>
        <item>Ingenieria Quimica</item>
        <item>Ingenieria de Sistemas</item>
        <item>Arquitectura</item>
        <item>Ingenieria Mecanica</item>
    </string-array>
    <string name="IdentidicadorBitacora">Id Bitacora</string>
    <string name="FechaInicioBitacora">Fecha Inicio Bitacora</string>
    <string name="FechaFinBitacota">Fecha Final de Bitacora</string>
    <string name="RevisionCoordinador">Revision Coordinador</string>
    <string name="RevisonTutor">Revision Tutor</string>
    <string name="IdentificadorTipActividad">Id TipoActividad</string>
    <string name="BotonAgregarBitacora">Agregar nuevo</string>
    <string name="EliminarBitacoraText">Seleccione una Bitacora a eliminar</string>
    <string name="SeleccionarBitacoras">Bitacora en el sistema</string>
    <string name="ActualizarBitacoraActivity">Seleccione una Bitacora a actualizar</string>
    <string name="BotonActualizarBitacora">Actualizar Bitacora</string>
    <string name="NombreCoordinador">Nombre Coordinador</string>
    <string name="EmailCoordinador">Correo Electronico</string>
    <string name="TelCoordinador">Telefono Coordinador</string>
    <string name="BotonAgregarCoordinador">Agregar nuevo</string>
    <string name="EliminarCoordinadorText">Seleccione un coordinador a eliminar</string>
    <string name="SeleccionarCoordinadores">Coordinadores en el sistema</string>
    <string name="ActualizarCoordinadorActivity">Seleccione un coordinador a actualizar</string>
    <string name="BotonActualizarCoordinador">Actualizar Coordinador</string>
    <string name="llenarBDIns">Llenar la base de datos Institucion</string>
    <string name="CrearInstitucion">Agregar una nueva Institucion</string>
    <string name="ActualizarInstitucion">Actualizar una Institucion existente</string>
    <string name="EliminarInstitucion">Eliminar una Institucion de la base</string>
    <string name="VerInstitucion">Ver todas las Instituciones</string>
    <string name="llenarBDSV">Llenar la base de datos Servicio Social</string>
    <string name="CrearServicioSocial">Agregar un nuevo Servicio Social</string>
    <string name="ActualizarServicioSocial">Actualizar un Servicio Social existente</string>
    <string name="EliminarServicioSocial">Eliminar un Servicio Social de la base</string>
    <string name="VerServiciosSociales">Ver todos los Servicios Sociales</string>
    <string name="Tabla_Institucion">Opciones para Institucion</string>
    <string name="AgregarInstitucion">Agregar una nueva Institucion</string>
    <string name="VerTodasInstituciones">Instituciones Registradas</string>
    <string name="EliminarInstituciones">Eliminar Institucion</string>
    <string name="ActualizarInstituciones">Actualizar Institucion</string>
    <string name="IdInstitucion">Identificador Institucion</string>
    <string name="NombreInstitucion">Nombre Institucion</string>
    <string name="EmailInstitucion">Correo Institucion</string>
    <string name="NombreEncargado">Nombre Encargado</string>
    <string name="Telefono1">Telefono1</string>
    <string name="Telefono2">Telefono2</string>
    <string name="AgregarIns">Agregar Institucion</string>
    <string name="EliminarInstitucionText">Seleccione un elemento a eliminar</string>
    <string name="SeleccionarInstituciones">Instituciones en el sistema</string>
    <string name="ActualizarInstitucionActivity">Seleccione una Institucion a actualizar</string>
    <string name="BotonActualizarInstitucion">Actualizar Institucion</string>
    <string name="Tabla_Servicio_Social">Opciones para Servicio Social</string>
    <string name="AgregarServicioSocial">Agregar Servicio Social</string>
    <string name="VerTodosServiciosSociales">Servicios Sociales registrados</string>
    <string name="EliminarServiciosSociales">Eliminar Servicio Social</string>
    <string name="ActualizarServiciosSociales">Actualizar Servicio Social</string>
    <string name="IdServicio">Identificador Servicio Social</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Disponible">Disponibilidad</string>
    <string name="IdentificadorInstitucion">Id Institucion</string>
    <string name="IdentificadorModalidad">Id Modalidad</string>
    <string name="IdentificadorTutor">Id Tutor</string>
    <string name="CoordinadorAprobado">Coordinador Aprobado</string>
    <string name="AgregarSS">Agregar Servicio Social</string>
    <string name="EliminarServicioSocialText">Seleccione un Servicio Social a eliminar</string>
    <string name="SeleccionarServicioSocial">Servicios Sociales en el sistema</string>
    <string name="ActualizarServicioSocialActivity">Seleccione un Servicio Social a actualizar</string>
    <string name="BotonActualizarServicioSocial">Actualizar Servicio Social</string>
    <string name="llenarBDTutor">Llenar la base de datos</string>
    <string name="CrearTutor">Agregar un nuevo Tutor</string>
    <string name="ActualizarTutorActivity">Actualizar un Tutor existente</string>
    <string name="EliminarTutorActivity">Eliminar un Tutor de la base</string>
    <string name="VerTutores">Ver todos los tutores</string>
    <string name="NombreTutor">Nombre Tutor</string>
    <string name="EmailTutor">Correo Electronico</string>
    <string name="TelTutor">Telefono Tutor</string>
    <string name="BotonAgregarTutor">Agregar nuevo</string>
    <string name="EliminarTutorText">Seleccione un tutor a eliminar</string>
</resources>