<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="grupo07.pdm115.eisi.fia.ues.com.sv.proyecto1.Controladores.ServicioSocialActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llenarBDSV"
        android:id="@+id/btnLlenarDBSV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CrearServicioSocial"
        android:id="@+id/btnAgregarSV"
        android:layout_below="@+id/btnLlenarDBSV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EliminarServicioSocial"
        android:id="@+id/btnEliminarSV"
        android:layout_below="@+id/btnAgregarSV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActualizarServicioSocial"
        android:id="@+id/btnActualizarSV"
        android:layout_below="@+id/btnEliminarSV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VerServiciosSociales"
        android:id="@+id/btnSeleccionarSV"
        android:layout_below="@+id/btnActualizarSV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>

</RelativeLayout>