<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="grupo07.pdm115.eisi.fia.ues.com.sv.proyecto1.Controladores.TipoDeActividadActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llenarBD"
        android:id="@+id/btnLlenarTipAcDB"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CrearTipoDeActividad"
        android:id="@+id/btnAgregarTipoDeActividad"
        android:layout_below="@+id/btnLlenarTipAcDB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EliminarTipoDeActividad"
        android:id="@+id/btnEliminarTP"
        android:layout_below="@+id/btnAgregarTipoDeActividad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActualizarTipoDeActividad"
        android:id="@+id/btnActualizarTipoActividad"
        android:layout_below="@+id/btnEliminarTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VerTipoDeActividades"
        android:id="@+id/btnSeleccionarTP"
        android:layout_below="@+id/btnActualizarTipoActividad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>



</RelativeLayout>
